main dummy API done
