# everyfoody/routes/review/review.js
@@ -1,20 +1,0 @@
-var express = require('express');
-var router = express.Router();
-
-/* GET users listing. */
-router.get('/registration/:store_name', function(req, res, next) {
-  
-	var user_email = req.body.user_email;
-	var owner_email = req.body.owner_email;
-	var review_score = req.body.review_score;
-	var review_content = req.body.review_content;
-	var store_name = req.params.store_name;
-
-  	res.status(200).send(
-	  	{
-	  		msg : "success",
-			status : 200,
-			data : ""
-		}
-	});
-});
