# everyfoody/routes/truck/index.js
@@ -1,19 +1,15 @@
 var express = require('express');
 var router = express.Router();
-var infomation = require('./infomaion');
-var location = require('./location');
-var registration = require('./registration');
+var information = require('./information');
+//var location = require('./location');
 var reservation = require('./reservation');
-var myinfo = require('./myinfo');
-var opening = require('./opening');
+//var opening = require('./opening');
 
 
-router.use('/infomation', infomation);
-router.use('/location',location);
-router.use('/regisration', registration);
+router.use('/info', information);
+//router.use('/location',location);
 router.use('/reservation', reservation);
-router.use('/myinfo', myinfo);
-router.use('/opening', opening);
+//router.use('/opening', opening);
 
 
 module.exports = router;
